--- a/5saro.html
+++ b/5saro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-<title>scc glb-viewer</title>
+<title>5saro glb-viewer</title>
 <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 <script src="https://rawgit.com/fernandojsg/aframe-teleport-controls/master/dist/aframe-teleport-controls.min.js"></script>
 <script type="module">
